# kol

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml
docs/: builtins.md  control_flow.md  data_types.md  functions.md  operators.md  structs_classes.md
example/: 구조와유형.콜  내장함수.콜  데이터타입.콜  반복.콜  안녕세상.콜  연산.콜  조건.콜  함수.콜
kol/: ast.py  builtin.py  bytecode.py  cli.py  compiler.py  frame.py  func.py  lexer.py  none.py  parser.py  struct.py  token.py  vm.py
test/: test_compiler.py  test_lexer.py  test_parser.py  test_vm.py
