[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kol"
version = "1.0.0"
authors = [
  { name="smc0478", email="smc0478@naver.com" },
]
description = "korean language"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
kol = "kol.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kol*"]
exclude = ["example*", "test*"]